--- a/Frontend/Available_Volunteers.html
+++ b/Frontend/Available_Volunteers.html
@@ -149,7 +149,7 @@
                 if (response.status === 401) {
                     alert('Not authorised to access this route');
                     localStorage.clear();
-                    window.location.assign('index.html');
+                    window.location.assign('Login.html');
                     return;
                 }
                 else if (response.status !== 200) {
@@ -163,7 +163,7 @@
                 if (volunteers.length === 0) {
                     const message = document.createElement('div');
                     message.className = 'message-card';
-                    message.textContent = 'No Pending Requests';
+                    message.textContent = 'No Available Volunteers';
                     container.appendChild(message);
                     return;
                 }
