--- a/Frontend/ngolist_ngo.html
+++ b/Frontend/ngolist_ngo.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -31,6 +31,17 @@
         .ftco-navbar-light {
             background: #343a40 !important;
             top: 0;
+        }
+        .message-card {
+            text-align: center;
+            font-size: 2rem;
+            padding: 3rem;
+            margin: 0 auto;
+            min-height: 60vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
     </style>
 </head>
